# 666

./: CMakeLists.txt  Dockerfile  Lab6.sln  docker-cpp.yml
.github/workflows/: docker-cpp.yml
Test_lab/: Test_lab.vcxproj  test.cpp
program/: Lab.cpp  Lab.h  program.cpp  program.vcxproj  program.vcxproj.filters
